--- a/src/components/LoginModal/style.scss
+++ b/src/components/LoginModal/style.scss
@@ -20,7 +20,6 @@
   border-radius: 20px;
   width: 100%;
   max-width: 400px;
-  margin: 20px;
   color: white;
   box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
   animation: slideUp 0.3s ease-out;
@@ -67,14 +66,14 @@
 .login-form {
   .register-link {
     text-align: left;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     font-size: 14px;
     color: #888;
     
     .link-btn {
       background: none;
       border: none;
-      color: #4ade80;
+      color: rgb(129 214 157);
       cursor: pointer;
       text-decoration: underline;
       margin-left: 4px;
@@ -87,14 +86,14 @@
   }
 
   .form-group {
-    margin-bottom: 25px;
+    margin-bottom: 20px;
   }
 
   .form-label {
     display: block;
     color: #ccc;
-    font-size: 16px;
-    margin-bottom: 10px;
+    font-size: 14px;
+    margin-bottom: 8px;
     font-weight: 400;
   }
 
@@ -105,12 +104,13 @@
 
     .form-input {
       width: 100%;
-      padding: 16px 16px;
+      height: 40px;
+      padding: 0px 12px;
       border: 1px solid #333;
       border-radius: 8px;
       font-size: 16px;
       color: white;
-      background-color: #2a2a2a;
+      background-color: #2a2a2a !important;
       transition: all 0.2s ease;
 
       &:focus {
@@ -143,12 +143,13 @@
 
   .forgot-password {
     text-align: right;
-    margin-bottom: 30px;
+    margin-bottom: 24px;
+    margin-top: -16px;
     
     .forgot-btn {
       background: none;
       border: none;
-      color: #888;
+      color: rgb(129 214 157);
       cursor: pointer;
       font-size: 14px;
       text-decoration: none;
@@ -162,16 +163,15 @@
 
   .submit-btn {
     width: 100%;
-    padding: 16px 24px;
-    background: #4ade80;
+    height: 48px;
+    background: rgb(129,214, 157);
     color: #1a1a1a;
     border: none;
     border-radius: 8px;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 600;
     cursor: pointer;
     transition: all 0.2s ease;
-    margin-bottom: 30px;
 
     &:hover {
       background: #22c55e;
@@ -186,7 +186,7 @@
 .social-login {
   .divider {
     text-align: center;
-    margin: 30px 0;
+    margin: 20px 0;
     color: #666;
     font-size: 14px;
     position: relative;
@@ -213,7 +213,7 @@
   .social-buttons {
     display: flex;
     justify-content: space-around;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     
     .social-btn {
       display: flex;
@@ -326,8 +326,7 @@
 
 @media (max-width: 640px) {
   .login-modal {
-    margin: 10px;
-    max-width: calc(100vw - 20px);
+    max-width: 100vw;
 
     &__header {
       padding: 25px 25px 0;
@@ -338,7 +337,7 @@
     }
 
     &__content {
-      padding: 25px 25px 35px;
+      padding: 5px 25px 15px;
     }
   }
 }
