--- a/src/components/RegisterModal/style.scss
+++ b/src/components/RegisterModal/style.scss
@@ -20,7 +20,6 @@
   border-radius: 20px;
   width: 100%;
   max-width: 400px;
-  margin: 20px;
   color: white;
   box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
   animation: slideUp 0.3s ease-out;
@@ -62,14 +61,14 @@
 .register-form {
   .login-link {
     text-align: left;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     font-size: 14px;
     color: #888;
     
     .link-btn {
       background: none;
       border: none;
-      color: #4ade80;
+      color: rgb(129 214 157);
       cursor: pointer;
       text-decoration: underline;
       margin-left: 4px;
@@ -88,8 +87,8 @@
   .form-label {
     display: block;
     color: #ccc;
-    font-size: 16px;
-    margin-bottom: 10px;
+    font-size: 14px;
+    margin-bottom: 8px;
     font-weight: 400;
   }
 
@@ -100,7 +99,8 @@
 
     .form-input {
       width: 100%;
-      padding: 16px 16px;
+      height: 40px;
+      padding: 0px 12px;
       border: 1px solid #333;
       border-radius: 8px;
       font-size: 16px;
@@ -123,22 +123,24 @@
   .invite-note {
     color: #888;
     font-size: 12px;
-    margin-bottom: 30px;
+    margin-top: -15px;
+    margin-bottom: 25px;
     line-height: 1.4;
   }
 
   .submit-btn {
     width: 100%;
-    padding: 16px 24px;
-    background: #4ade80;
+    height: 48px;
+    padding: 0px 24px;
+    background: rgb(129, 214, 157);
     color: #1a1a1a;
     border: none;
     border-radius: 8px;
-    font-size: 18px;
+    font-size: 15px;
     font-weight: 600;
     cursor: pointer;
     transition: all 0.2s ease;
-    margin-bottom: 30px;
+    margin-bottom: 22px;
 
     &:hover {
       background: #22c55e;
@@ -153,7 +155,7 @@
 .social-login {
   .divider {
     text-align: center;
-    margin: 30px 0;
+    margin: 0px 0 20px;
     color: #666;
     font-size: 14px;
     position: relative;
@@ -181,7 +183,7 @@
     display: flex;
     justify-content: center;
     gap: 40px;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
     
     .social-btn {
       display: flex;
@@ -235,6 +237,7 @@
   .footer-links {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 20px;
     
     .footer-link {
@@ -271,8 +274,7 @@
 
 @media (max-width: 640px) {
   .register-modal {
-    margin: 10px;
-    max-width: calc(100vw - 20px);
+    max-width: 100vw;
 
     &__header {
       padding: 25px 25px 0;
@@ -283,7 +285,7 @@
     }
 
     &__content {
-      padding: 25px 25px 35px;
+      padding: 5px 25px 18px;
     }
   }
 }
